objects/SBQQ__Quote__c/fields/Distributor_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Discount_Percentage__c</fullName>
    <formula>IF(
AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c  &lt;= 9999,NOT(Is_Renewal__c)), SBQQ__Partner__r.Distributor_discount_1_9999_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 10000,SBQQ__Account__r.Sales_Ops_Derived_EP__c &lt; 25000,NOT(Is_Renewal__c)),SBQQ__Partner__r.Distributor_discount_10_25k_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 25000,SBQQ__Account__r.Sales_Ops_Derived_EP__c &lt; 40000,NOT(Is_Renewal__c)),SBQQ__Partner__r.Distributor_discount_25_40k_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 40000,NOT(Is_Renewal__c)),SBQQ__Partner__r.Distributor_discount_40K_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c  &lt;= 9999,Is_Renewal__c), SBQQ__Partner__r.Disti_Renewal_discount_1_9999_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 10000,SBQQ__Account__r.Sales_Ops_Derived_EP__c &lt; 25000,Is_Renewal__c),SBQQ__Partner__r.Disti_Renewal_discount_10_25k_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 25000,SBQQ__Account__r.Sales_Ops_Derived_EP__c &lt; 40000,Is_Renewal__c),SBQQ__Partner__r.Disti_Renewal_discount_25_40k_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 40000,Is_Renewal__c),SBQQ__Partner__r.Disti_Renewal_discount_40K_Endpoints__c,
0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>