objects/SBQQ__Quote__c/fields/Distributor_Involvement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Involvement_Discount__c</fullName>
    <label>DEPRECATED - Disti Involvement Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>