objects/SBQQ__Quote__c/fields/Do_Not_Show_Dates__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Show_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is a conditional print field for start date and End date.
The previous label was- Add Dates on Quote &amp; License Schedule</description>
    <inlineHelpText>Check to add start and end dates in the Quote and License Schedule Table.</inlineHelpText>
    <label>Lock in Dates &amp; Display on Quote</label>
    <type>Checkbox</type>
</CustomField>