objects/SBQQ__Quote__c/fields/Dont_Run_Product_Rule__c.field-meta.xml
<CustomField>
    <fullName>Dont_Run_Product_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field updated using a summary variable and product rule. SS-7830.</description>
    <label>Don’t Run Product Rule</label>
    <type>Checkbox</type>
</CustomField>