objects/SBQQ__Quote__c/fields/Downstream_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Partner_Level__c</fullName>
    <formula>TEXT( Downstream_Reseller__r.Partner_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downstream Partner Level</label>
    <type>Text</type>
</CustomField>