objects/SBQQ__Quote__c/fields/Downstream_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Partner_Name__c</fullName>
    <description>Display Downstream Partner Name on the Quote PDF</description>
    <formula>Downstream_Reseller__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Downstream Partner Name</label>
    <type>Text</type>
</CustomField>