objects/SBQQ__Quote__c/fields/Downstream_Partner_Override__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Partner_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downstream Partner Override</label>
    <type>Checkbox</type>
</CustomField>