objects/SBQQ__Quote__c/fields/Downstream_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downstream Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Downstream Reseller)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>