objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <defaultValue>$Label.Quite_View</defaultValue>
    <inlineHelpText>Change which columns are displayed.  Click Quick Save to apply.</inlineHelpText>
    <label>Quote View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Mid_Term_Expansion</fullName>
                <label>Mid-Term Expansion</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Target_Pricing_Tools</fullName>
                <label>Target Pricing Tools</label>
            </value>
            <value>
                <fullName>New_Billing_Schedule</fullName>
                <label>Legacy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>