objects/SBQQ__Quote__c/fields/Effective_Discount_Score__c.field-meta.xml
<CustomField>
    <fullName>Effective_Discount_Score__c</fullName>
    <inlineHelpText>Score based on discounts Including Incentives</inlineHelpText>
    <label>DEPRECATED - Effective Discount Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>