objects/SBQQ__Quote__c/fields/Eligible_for_Distributor_Discount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Distributor_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set via flow - Partner Business Motion contains Distribute OR Partner Type contains Distributor.  Used as a replacement for Partner Distribution field and in Price Rules</description>
    <label>Eligible for Distributor Discount</label>
    <type>Checkbox</type>
</CustomField>