objects/SBQQ__Quote__c/fields/End_Customer_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Product_Discount__c</fullName>
    <description>End User Product Discount - Product Discount + Partner Margin

06/08/23 - RAP - Removed Partner Margin Calculated</description>
    <formula>Product_Discount_no_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End User Product Discount - Product Discount + Partner Margin</inlineHelpText>
    <label>DEPRECATED - End Customer Product Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>