objects/SBQQ__Quote__c/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MSP Managed Customer.  Set by a Process Builder for Renewal and Amendments</description>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (End User Account)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>