objects/SBQQ__Quote__c/fields/End_User_Account_Display__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account_Display__c</fullName>
    <description>Display on quote template.</description>
    <formula>End_User_Account__r.Name</formula>
    <label>End User Account Display</label>
    <type>Text</type>
</CustomField>