objects/SBQQ__Quote__c/fields/End_User_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account_Type__c</fullName>
    <description>Use to route quote for approval.</description>
    <formula>TEXT(  End_User_Account__r.Type )</formula>
    <label>End User Account Type</label>
    <type>Text</type>
</CustomField>