objects/SBQQ__Quote__c/fields/End_User_List_total_without_Promo__c.field-meta.xml
<CustomField>
    <fullName>End_User_List_total_without_Promo__c</fullName>
    <description>End User List total without Promo : List Total - Partner Margin</description>
    <formula>List_total_without_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End User List total without Promo : List Total - Partner Margin</inlineHelpText>
    <label>End User List total without Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>