objects/SBQQ__Quote__c/fields/End_User_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>End_User_Product_Discount__c</fullName>
    <businessOwnerGroup>Deals_Desk</businessOwnerGroup>
    <description>End user Product Discount %</description>
    <formula>if( List_total_without_Promo__c = 0 , 0, Product_Discount_no_Promo__c / List_total_without_Promo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End customer product discount / End User List Total without promo</inlineHelpText>
    <label>End User Product Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>