objects/SBQQ__Quote__c/fields/ESO_1_Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_1_Requested_Start_Date__c</fullName>
    <description>INC0130413</description>
    <inlineHelpText>Proposed Start Date for Client.</inlineHelpText>
    <label>ESO 1 Requested Start Date</label>
    <type>Date</type>
</CustomField>