objects/SBQQ__Quote__c/fields/ESO_Justification__c.field-meta.xml
<CustomField>
    <fullName>ESO_Justification__c</fullName>
    <description>Ref: INC0130413</description>
    <inlineHelpText>What specifically will satisfy the Customer’s objectives? E.g. This customer is willing to pay for a resource because they need to assure that they can run their vulnerability scanning and patch management workflow using Tanium</inlineHelpText>
    <label>ESO Justification</label>
    <type>TextArea</type>
</CustomField>