objects/SBQQ__Quote__c/fields/ESO_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>ESO_Product_Count__c</fullName>
    <description>This field is populated by Declarative Rollup and Used in approval process</description>
    <inlineHelpText>This field is populated by Declarative Rollup and Used in approval process</inlineHelpText>
    <label>ESO Product Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>