objects/SBQQ__Quote__c/fields/ESR_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>ESR_Product_Discount__c</fullName>
    <description>This field is populated by the declarative Rollup for discount on ESR or OTAM product line Products</description>
    <inlineHelpText>This field is populated by the declarative Rollup for discount on ESR OR OTAM product line Products</inlineHelpText>
    <label>ESR Product Discount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>