objects/SBQQ__Quote__c/fields/Exclude_Auto_Renewal_Language__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Auto_Renewal_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quotes that should be excluded in a certain language from the standard clause.SS-12085</description>
    <label>Exclude Auto-Renewal Language</label>
    <type>Checkbox</type>
</CustomField>