objects/SBQQ__Quote__c/fields/Exclude_Partner_Transition_ISR__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Partner_Transition_ISR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Partner Transition ISR</label>
    <type>Checkbox</type>
</CustomField>