objects/SBQQ__Quote__c/fields/Exclude_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Uplift__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Turn off Uplift functionality for all lines</inlineHelpText>
    <label>Exclude Uplift (All Lines)</label>
    <type>Checkbox</type>
</CustomField>