objects/SBQQ__Quote__c/fields/Execute_PriceRule__c.field-meta.xml
<CustomField>
    <fullName>Execute_PriceRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute PriceRule</label>
    <type>Checkbox</type>
</CustomField>