objects/SBQQ__Quote__c/fields/Exit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>The sum of the ARR of applicable Quote lines that are active on the Last day of the term in the Quote</description>
    <label>Exit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>