objects/SBQQ__Quote__c/fields/Exit_ARR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR_End_Date__c</fullName>
    <inlineHelpText>This is the latest end date of ARR eligible quote lines associated to this quote</inlineHelpText>
    <label>Exit ARR End Date</label>
    <summarizedField>SBQQ__QuoteLine__c.EndDateCompEDW__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Exclude_ARR_Formula__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>