objects/SBQQ__Quote__c/fields/Exit_ARR_Unadjusted__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR_Unadjusted__c</fullName>
    <description>The sum of the ARR of applicable Quote lines that are active on the Last day of the term in the Quote.  This field is managed by CPQ Price Rule.

10.8.2024 - Deprecated in favor of a rollup summary field. Jira ticket SS-9387</description>
    <inlineHelpText>This is a deprecated field. Please refer to Exit ARR Unadjusted (Rollup)</inlineHelpText>
    <label>DEPRECATED - ExtARR Unadjst (Price Rule)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>