objects/SBQQ__Quote__c/fields/Exit_ARR_Unadjusted_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR_Unadjusted_Rollup__c</fullName>
    <description>The sum of the ARR of applicable Quote lines that are active on the Last day of the term in the Quote.</description>
    <label>Exit ARR Unadjusted (Rollup)</label>
    <summarizedField>SBQQ__QuoteLine__c.ARR_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Include_in_Exit_ARR__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>