objects/SBQQ__Quote__c/fields/Expiration_date_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date_Close_Date__c</fullName>
    <formula>SBQQ__ExpirationDate__c - SBQQ__Opportunity2__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration date - Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>