objects/SBQQ__Quote__c/fields/Expiration_Date_Limit__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Limit__c</fullName>
    <description>SS-1953 Allow Deal Desk to &quot;lock&quot; expiration dates for quotes with quarter-end incentives</description>
    <label>Expiration Date Limit</label>
    <type>Date</type>
</CustomField>