objects/SBQQ__Quote__c/fields/Final_Term_on_free_Prodcuts__c.field-meta.xml
<CustomField>
    <fullName>Final_Term_on_free_Prodcuts__c</fullName>
    <formula>SBQQ__SubscriptionTerm__c  -  Free_Products_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Term on free Prodcuts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>