objects/SBQQ__Quote__c/fields/First_Billing_Override__c.field-meta.xml
<CustomField>
    <fullName>First_Billing_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Billing Override</label>
    <type>Checkbox</type>
</CustomField>