objects/SBQQ__Quote__c/fields/Fixed_Pricing_Discount_Term__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing_Discount_Term__c</fullName>
    <inlineHelpText>Term (stated in number of months from the order effective date) the Future Fixed Pricing is guaranteed.  Used for &quot;Future Fixed Pricing - %&quot; term and &quot;Future Fixed Pricing - $&quot; term.</inlineHelpText>
    <label>Future Fixed Pricing Term (Mos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>