objects/SBQQ__Quote__c/fields/Fixed_Pricing_Term__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing_Term__c</fullName>
    <label>Fixed Pricing Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>