objects/SBQQ__Quote__c/fields/Flag_Color__c.field-meta.xml
<CustomField>
    <fullName>Flag_Color__c</fullName>
    <label>Flag Color</label>
    <length>150</length>
    <type>Text</type>
</CustomField>