objects/SBQQ__Quote__c/fields/FOC_Burst_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>FOC_Burst_Quote_Lines__c</fullName>
    <description>Populated by DLRS that counts the number of FOC/Burst items on quote lines.</description>
    <label>FOC/Burst Quote Lines</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>