objects/SBQQ__Quote__c/fields/FOC_DD_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>FOC_DD_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC DD Approval Needed</label>
    <type>Checkbox</type>
</CustomField>