objects/SBQQ__Quote__c/fields/Focus_Round__c.field-meta.xml
<CustomField>
    <fullName>Focus_Round__c</fullName>
    <description>Focus Round</description>
    <inlineHelpText>Negotiation iteration (Round 1 / Round 2 / BAFO)</inlineHelpText>
    <label>Focus Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round 1</fullName>
            </value>
            <value>
                <fullName>Round 2</fullName>
            </value>
            <value>
                <fullName>BAFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>