objects/SBQQ__Quote__c/fields/Footprint_Score__c.field-meta.xml
<CustomField>
    <fullName>Footprint_Score__c</fullName>
    <formula>IF( SBQQ__Account__r.Tanium_Derived_EP_WF__c =0,0,IF( No_of_End_Points_Quote_Score__c / SBQQ__Account__r.Tanium_Derived_EP_WF__c  &lt; 0.25,1,IF( (No_of_End_Points_Quote_Score__c )/  SBQQ__Account__r.Tanium_Derived_EP_WF__c  &lt; 0.50,2,IF( (No_of_End_Points_Quote_Score__c)/  SBQQ__Account__r.Tanium_Derived_EP_WF__c  &lt; 0.75,3,4))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Footprint % - Ratio of Seats Purchased to Tanium Derived Estimated Endpoints</inlineHelpText>
    <label>Footprint Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>