objects/SBQQ__Quote__c/fields/Free_Products__c.field-meta.xml
<CustomField>
    <fullName>Free_Products__c</fullName>
    <inlineHelpText>Select &quot;Free Products“ that are provided at no charge for the &quot;Free Product Period&quot; and enter zero dollar line item entry in Quote Line Items for each product</inlineHelpText>
    <label>Free Products (FOC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tanium Core</fullName>
            </value>
            <value>
                <fullName>Tanium Security Suite</fullName>
            </value>
            <value>
                <fullName>Tanium Threat Response</fullName>
            </value>
            <value>
                <fullName>Tanium Comply</fullName>
            </value>
            <value>
                <fullName>Tanium IM</fullName>
            </value>
            <value>
                <fullName>Tanium Protect</fullName>
            </value>
            <value>
                <fullName>Tanium Discover</fullName>
            </value>
            <value>
                <fullName>Tanium Patch</fullName>
            </value>
            <value>
                <fullName>Tanium Training</fullName>
            </value>
            <value>
                <fullName>Tanium Premium Support</fullName>
            </value>
            <value>
                <fullName>Tanium Trace</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
                <label>Tanium Incident Response</label>
            </value>
            <value>
                <fullName>IOC Detect</fullName>
                <label>Tanium IOC Detect</label>
            </value>
            <value>
                <fullName>Tanium Asset</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
                <label>Tanium Deploy</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Tanium Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>