objects/SBQQ__Quote__c/fields/Future_Discount_on_Burst_Products__c.field-meta.xml
<CustomField>
    <fullName>Future_Discount_on_Burst_Products__c</fullName>
    <description>&quot;Future Discount on Burst products&quot; will be applied to free products if customer decides to purchase the product at the conclusion of the &quot;Bursting Period&quot;.</description>
    <inlineHelpText>&quot;Future Discount on Burst products&quot; will be applied to free products if customer decides to purchase the product at the conclusion of the &quot;Bursting Period&quot;.</inlineHelpText>
    <label>DEPRECATED - Future Disc Burst Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>