objects/SBQQ__Quote__c/fields/Future_Discount_on_Free_Products__c.field-meta.xml
<CustomField>
    <fullName>Future_Discount_on_Free_Products__c</fullName>
    <description>&quot;Future Discount on free products&quot; will be applied to free products prior to applying the &quot;Renewal Price Cap&quot;.</description>
    <inlineHelpText>To guarantee pricing on modules not yet purchased. You MUST Modify Quote Terms to insert Product names. Customer may purchase the following Tanium Products at a __% discount off MSRP.</inlineHelpText>
    <label>DEPRECATED - Future Module Price Disc %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>