objects/SBQQ__Quote__c/fields/Future_Discount_on_Trial_Products__c.field-meta.xml
<CustomField>
    <fullName>Future_Discount_on_Trial_Products__c</fullName>
    <description>At the end of the &quot;Trial Product Period&quot;, Customer can purchase &quot;Trial Product&quot; at the &quot;Future Discount on trial Products&quot; discount off of the then list price.</description>
    <inlineHelpText>At the end of the Trial Product Period, Customer can purchase Trial Product at the &quot;Future Discount on trial Products&quot; discount off of the then list price.</inlineHelpText>
    <label>DEPRECATED - Future Disc on Trial Prods</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>