objects/SBQQ__Quote__c/fields/FutureDelivery__c.field-meta.xml
<CustomField>
    <fullName>FutureDelivery__c</fullName>
    <formula>SBQQ__StartDate__c -  TODAY() &gt; 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Quote Start Date - Today &gt; 15 days</inlineHelpText>
    <label>Future Delivery</label>
    <type>Checkbox</type>
</CustomField>