objects/SBQQ__Quote__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <description>Used in CPQ rules and search filters.</description>
    <formula>TEXT(SBQQ__Account__r.Geo__c)</formula>
    <label>Geo</label>
    <type>Text</type>
</CustomField>