objects/SBQQ__Quote__c/fields/Hardware_Discount__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Discount__c</fullName>
    <label>DEPRECATED - Hardware Discount</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>