objects/SBQQ__Quote__c/fields/Hardware_SKU_count__c.field-meta.xml
<CustomField>
    <fullName>Hardware_SKU_count__c</fullName>
    <description>03/02/2021 Didnot find how this field is populated. 
Reports show this field is not been populated on Quotes. Ok to delete
Creating an alternate field &quot;Hardware Product Count&quot;.</description>
    <formula>ApplianceSKUs__c - HardwareSupport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Hardware SKU count TBD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>