objects/SBQQ__Quote__c/fields/HardwareSupport__c.field-meta.xml
<CustomField>
    <fullName>HardwareSupport__c</fullName>
    <label>Hardware Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>