objects/SBQQ__Quote__c/fields/Has_Conversion_TaaS_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Conversion_TaaS_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INC0135177
This field to be checked by WFR &quot;Has Conversion TaaS Product&quot; if the Quote contains a Conversion-TaaS Product. 
Only visible to Admins
Used in Quote Terms
QT-29665
QT-29666
QT-29667</description>
    <label>Has Conversion-TaaS Product</label>
    <type>Checkbox</type>
</CustomField>