objects/SBQQ__Quote__c/fields/Has_MM_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_MM_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INC0143713
Only visible to Admin for troubleshooting
Updated by WFR: Quote contains Mid Market Sku</description>
    <label>Has MM Product</label>
    <type>Checkbox</type>
</CustomField>