objects/SBQQ__Quote__c/fields/Has_Perpetual_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Perpetual_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Perpetual Products</label>
    <type>Checkbox</type>
</CustomField>