objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <description>Used to dynamically set Quote Header fields based on Oppty Type. SS-8935.</description>
    <label>HeaderFieldSetName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__LineEditor</fullName>
            </value>
            <value>
                <fullName>Renewal_Line_Editor</fullName>
            </value>
            <value>
                <fullName>New_Line_Editor</fullName>
            </value>
            <value>
                <fullName>Expansion_Line_Editor</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Backsolve_Line_Editor</fullName>
                <isActive>false</isActive>
                <label>Backsolve_Line_Editor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>