objects/SBQQ__Quote__c/fields/Hosting_Costs__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Costs__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>Implemented as a part of the MSP Simplification project. Jira ticket SS-7718</description>
    <label>Hosting Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>