objects/SBQQ__Quote__c/fields/IARR_Threshold__c.field-meta.xml
<CustomField>
    <fullName>IARR_Threshold__c</fullName>
    <description>Calculates Incoming ARR Threshold (Incoming ARR x .2) per bookings policy.  SS-10270</description>
    <formula>SBQQ__Opportunity2__r.Incoming_ARR__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IARR Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>