objects/SBQQ__Quote__c/fields/Ignore_Partner_Addres__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Partner_Addres__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check this box when required. Check this box when making temporary changes to the Bill To Name / Address. If the Partner or Customer requires an Address Update, please add an Address to the Account page and check &quot;Refresh Bill To Address&quot;</inlineHelpText>
    <label>Different Bill To/Ship To Info</label>
    <type>Checkbox</type>
</CustomField>