objects/SBQQ__Quote__c/fields/Ignore_Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Partner_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow changes to the Partner Program Discount (will route your quote for executive approval)</inlineHelpText>
    <label>Override Partner Program Discount</label>
    <type>Checkbox</type>
</CustomField>