objects/SBQQ__Quote__c/fields/In_Partner_Territory_Program__c.field-meta.xml
<CustomField>
    <fullName>In_Partner_Territory_Program__c</fullName>
    <description>SS-12854 Formula field to identify whether a Tanium Partner Discount should be applied if Account or End User Account is in a Partner Territory Program. Used in Price Rules for Partner Discount Rates.</description>
    <formula>IF(
AND( Business_Motion_Oppty__c = &apos;MSP&apos;,
NOT(ISBLANK(End_User_Account__c))
),End_User_Account__r.In_Partner_Territory_Program__c,
SBQQ__Account__r.In_Partner_Territory_Program__c
)</formula>
    <label>In Partner Territory Program</label>
    <type>Checkbox</type>
</CustomField>