objects/SBQQ__Quote__c/fields/In_Year_ARR_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>In_Year_ARR_Adjustment__c</fullName>
    <description>01/08/2025 - Label updated to align with Corporate ARR nomenclature. Jira ticket SS-9438</description>
    <formula>SBQQ__Opportunity2__r.In_Year_ARR_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is inherited from the opportunity associated to this quote</inlineHelpText>
    <label>In Year Sales ARR Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>