objects/SBQQ__Quote__c/fields/Includes_On_Prem_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Includes_On_Prem_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Managed by a Price Rule and used in Quote Approval Routing.</description>
    <label>Includes On-Prem Bundle</label>
    <type>Checkbox</type>
</CustomField>