objects/SBQQ__Quote__c/fields/Includes_Trial_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Includes_Trial_Product_Count__c</fullName>
    <description>Used in Price Rule to count how any Quote Lines have Promotion &apos;Trial&apos;.</description>
    <label>Includes Trial Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>