objects/SBQQ__Quote__c/fields/Incoming_ARR_formula__c.field-meta.xml
<CustomField>
    <fullName>Incoming_ARR_formula__c</fullName>
    <formula>SBQQ__Opportunity2__r.Incoming_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incoming ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>