objects/SBQQ__Quote__c/fields/Incoming_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>Incoming_ARR_Override__c</fullName>
    <description>The functionality of this field has been moved to the opportunity. This field can be deleted on March 17, 2023</description>
    <inlineHelpText>You can use this field to override the Incoming ARR amount coming in from the contract(s) related to this quote&apos;s opportunity</inlineHelpText>
    <label>DEPRECATED - Incoming ARR Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>