objects/SBQQ__Quote__c/fields/Indirect_Partner_Override__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Partner_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[INC0180396] Being used in the validation rule. [ The validation rule is overridden/disabled when the box is checked.  The validation rule is active when the box is not checked.  The field should be called &quot;Indirect Partner Override&quot;.  It should be added to the layout/profile below the &quot;Downstream Partner Override&quot; field with edit access for Tanium Deal Desk, Partner Portal Admin, System Admin profiles only.  No other profile should have visibility to this field]</description>
    <label>Indirect Partner Override</label>
    <type>Checkbox</type>
</CustomField>